<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TasquesTotals"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/novaTasca"
        android:textColor="#0099BB"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="65dp"
        android:layout_weight="1"
        android:text="@string/nomTasca"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text" 
        android:maxLines="1">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:text="@string/desc"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_weight="1"
        android:text="@string/guardarTasca" />

</LinearLayout>